--- a/LIBFT/Makefile
+++ b/LIBFT/Makefile
@@ -21,6 +21,11 @@ SRCS	=	ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c 
 
 OBJS	=	${SRCS:.c=.o}
 
+BONUS	=	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
+			ft_lstdelone.c ft_lstclear.c ft_lstiter.c
+
+BONUS_OBJS	=	${BONUS:.c=.o}
+
 CC		= gcc
 
 CFLAGS	= -Wall -Wextra -Werror -g 
@@ -32,13 +37,18 @@ all: ${NAME}
 ${NAME}:	
 		${CC} -c ${CFLAGS} ${SRCS} 
 		ar crs ${NAME} ${OBJS}
-		
+# Rule to remove all the object files and directory.		
 clean:
-			${RM} ${OBJS}
-
+			${RM} ${OBJS} ${BONUS_OBJS}
+# Rule to remove everything that has been created by the makefile.
 fclean:		clean
 				${RM} ${NAME}
-
+# Rule to re-make everything.
 re:			fclean all
 
+bonus:		${OBJS} ${BONUS_OBJS}
+			ar crs ${NAME} ${OBJS} ${BONUS_OBJS}
+
+# Makes sure that gnu make will still run even if files called
+# clean / fclean / all and re already exist in the directory
 .PHONY: all, clean, fclean, re
