trying to correct memory leaks

--- a/PIPEX/Makefile
+++ b/PIPEX/Makefile
@@ -6,7 +6,7 @@ SRCS =      sources/pipex.c \
 
 OBJS = ${SRCS:.c=.o}
 CC = gcc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -fsanitize=leak
 RM = rm -rf
 
 all: ${NAME}
@@ -20,7 +20,7 @@ clean:
 	@${RM} ${OBJS}
 
 fclean: clean
-	@${RM} ${NAME}
+	@${RM} pipex
 
 re: fclean all
 
