--- a/PUSH_SWAP/Makefile
+++ b/PUSH_SWAP/Makefile
@@ -19,9 +19,9 @@ SRCS =      push_movements.c \
 			big_lists_sorter.c \
 			stack_operations.c \
 			swap_moves.c \
-			500_list_sorter.c \
 			utils.c \
-			find_quartiles.c
+			find_quartiles.c \
+			free_functions.c
 
 OBJS = ${SRCS:.c=.o}
 CC = gcc
