drawing part of the map

--- a/SO_LONG/Makefile
+++ b/SO_LONG/Makefile
@@ -1,6 +1,6 @@
 NAME		=	so_long
 CC			=	gcc
-FLAGS		=	-Wall -Wextra -Werror -fsanitize=address -fno-omit-frame-pointer
+FLAGS		=	-Wall -Wextra -Werror 
 MLX			=	minilibx/Makefile.gen
 INC			=	-I ./minilibx 
 LIB			=	-L ./minilibx -lmlx -lXext -lX11 -lm -lbsd
@@ -9,7 +9,8 @@ SRC			=	so_long.c \
 				sources/map_checks.c \
 				sources/map_parsing.c \
 				sources/frees.c \
-				sources/init_game.c
+				sources/init_game.c \
+				sources/draw_map.c
 
 all:		$(MLX) obj $(NAME)
 
