working on the player movements

--- a/SO_LONG/Makefile
+++ b/SO_LONG/Makefile
@@ -15,7 +15,9 @@ SRC			=	so_long.c \
 				sources/map_parsing.c \
 				sources/frees.c \
 				sources/init_game.c \
-				sources/draw_map.c
+				sources/draw_map.c \
+				sources/events.c \
+				sources/player_movement.c
 
 LIBFTPATH = ./LIBFT/
 
