working on the Makefile

--- a/SO_LONG/Makefile
+++ b/SO_LONG/Makefile
@@ -2,11 +2,11 @@ CC = gcc
 
 NAME = so_long
 
-LIBFTNAME = libft.a
+CFLAGS = -Werror -Wall -Wextra -fsanitize=address -fno-omit-frame-pointer
 
-CFLAGS = -Werror -Wall -Wextra #-fsanitize=address -fno-omit-frame-pointer
-
-MINILIBX = -L ./minilibx -lmlx -lXext -lX11 -lm -lbsd
+MINILIBXPATH = ./minilibx/
+MINILIBX = $(MINILIBX_PATH)/libmlx.a 
+MINILIBX_FLAGS = -L. -lXext -L. -lX11
 #FOR MAC -> MINILIBX = -I /usr/X11/include -g  -l mlx -framework OpenGL -framework AppKit
 
 OBJ			=	$(patsubst src%, obj%, $(SRC:.c=.o))
@@ -22,13 +22,14 @@ SRC			=	so_long.c \
 				sources/player_movement.c
 
 LIBFTPATH = ./LIBFT/
+LIBFTNAME = libft.a
 
 all:		$(NAME)
 
-${NAME}: fclean
+${NAME}: 
 	make -C ${LIBFTPATH}
 	mv $(LIBFTPATH)${LIBFTNAME} ${LIBFTNAME}
-	${CC} ${CFLAGS} ${SRC} ${LIBFTNAME} ${MINILIBX} -o ${NAME}
+	${CC} ${CFLAGS} ${SRC} ${LIBFTNAME} ${MINILIBX} ${MINILIBX_FLAGS}  -o ${NAME}
 
 obj:
 			@mkdir -p obj
@@ -37,11 +38,14 @@ obj/%.o:	src/%.c
 			$(CC) $(FLAGS) $(INC) -o $@ -c $<
 
 clean:
+			
+			$(MAKE) -C $(LIBFTPATH) clean
+			$(MAKE) -C $(MINILIBXPATH) clean
 			@rm -rf $(OBJ) obj
 
 fclean: clean
 	rm -f $(LIBFTNAME) ${OBJS} $(NAME)
 
-re: fclean ${NAME}
+re: 	fclean ${NAME}
 
 .PHONY:		all clean fclean re
